test/compile_errors/err_expected_expression.w
//! expect-check-fail: expected expression
fn main:
    let x = @
